--- a/karl/views/static/tinymce/3.3.9.2/themes/advanced/skins/karl/karl-tiny-packed.css
+++ b/karl/views/static/tinymce/3.3.9.2/themes/advanced/skins/karl/karl-tiny-packed.css
@@ -299,6 +299,8 @@
 /* Image listing */
 .tiny-imagedrawer-panel-images {
     overflow: hidden;
+    /* for IE7's sake */
+    position: relative;
 }
 
 .tiny-imagedrawer-images {
@@ -374,6 +376,7 @@ div.tiny-imagedrawer-image img {
     #position: relative;
     #top: -50%;
     #left: -50%;
+
 }
 
 span.tiny-imagedrawer-imagelabel {
